# Drawapp

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DrawingEngine.cpp  DrawingEngine.h  native-lib.cpp
app/src/main/java/com/example/drawapp/: CanvasView.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
